hard-gists/3834979/run.log
=== Docker Run Log for 3834979 ===
Started at: Mi 29. Okt 14:02:52 CET 2025

[2025-10-29 14:02:52] START: Running container for 3834979
[2025-10-29 14:02:52] SUCCESS: Container 2cc0b2c2af063d2499b9dc9d21b6d89cdbf8efec8f73ec9e18bb29b253894333 started for 3834979
=== Container logs for 3834979 ===
  File "/snippet.py", line 29
    raise TemplateSyntaxError, '%r tag requires a string, an old value, and a new value.' % token.contents.split()[0]
                             ^
SyntaxError: invalid syntax
=== End of logs for 3834979 ===
[2025-10-29 14:02:54] INFO: Container 2cc0b2c2af063d2499b9dc9d21b6d89cdbf8efec8f73ec9e18bb29b253894333 has stopped
